Updated queries, population and db structure

--- a/src/queryIndici/query.tex
+++ b/src/queryIndici/query.tex
@@ -6,3 +6,9 @@
 	\item \textbf{Lista dei dipendenti (nome, cognome), con inizio e fine turno, ordinati in modo decrescente sull'inizio del turno, che sono a lavorare il giorno 12 giugno 2019}
 	
 \end{enumerate}
+
+	+-----------------+------+\\
+	| BottigliaDiVino | Sum  |\\
+	+-----------------+------+\\
+	|              13 |   59 |\\
+	+-----------------+------+\\
