--- a/src/analisiRequisiti/analisi_requisiti.tex
+++ b/src/analisiRequisiti/analisi_requisiti.tex
@@ -1,21 +1,11 @@
-% L'interesse principale di questo progetto e' modellare una base di dati che supporti l'operativita' della cantina vinicola \emph{NomeCantina}. La principale merce prodotta e' la bottiglia di vino, identificata dalle seguenti informazioni: \begin{itemize}
-%     \item Una tipologia di vino
-%     \item L'anno dell'imbottigliamento, detto \emph{annata}
-%     \item 
-% \end{itemize}
-
-
-% Si vuole realizzare una base di dati per rappresentare al meglio il lavoro della cantina \emph{Nome cantina}. Come prodotto principale c'è la \textbf{bottiglia di vino} che è caratterizzata dal tipo di vino contenuto e dall'annata. Altri dati importanti sono il prezzo per bottiglia, il numero di bottiglie prodotte e vendute, il tipo di tappo e bottiglia ed infine dalla classificazione: vini a denominazione d'origine controllata e garantita (D.O.C.G.); vini a denominazione d'origine controllata (D.O.C.); vini ad indicazione geografica tipica (I.G.T.). Ciascuna tipologia di bottiglia di vino è racchiusa in magazzini aventi il numero di bottiglie contenute divisi per la colorazione del vino (rosso, bianco, rosato e spumante).
-% Altro prodotto importante è il \textbf{vino}, che viene identificato tramite il nome. Inoltre dati importanti del vino sono la gradazione alcolica, il tempo di fermentazione e la tipologia dell'uva con la relativa vendemmia (anno di raccolta) con cui è stato prodotto. Importante inoltre tenere traccia se un determinato vino è ancora in fase di produzione o è diventato fuori commercio.\\ Ovviamente la cantina acquista esternamente da altre \textbf{aziende} le proprie \textbf{materie prime} che vanno a formare il prodotto finale, queste materie prime sono identificate tramite un ID univoco. Quest'ultime si dividono in uva, bottiglia e tappo. Dell'uva è importante tenere traccia dell'anno di raccolta, del nome e del colore. Dei tappi viene registrata la forma ed il materiale; delle bottigle, invece, viene registrata la capacità ed il colore. Inoltre è presente il dato che identifica la quantità posseduta dalla cantina sia per i tappi che per le bottigle.\\
-% Un tipo d'uva proviene da un tipo di \textbf{vigna}, identificata da un ID, la quale è coltivata in un determinato \textbf{vigneto}. Importante identificare la data della piantagione della vigna. Del vigneto, anch'esso identificato tramite un ID è utile identificatore l'indirizzo di locazione.\\
-% Le aziende con cui la cantina ha relazione sono molteplici. Queste aziende si dividono in fornitori, aziende di manutenzione macchinari e negozi interni della cantina. Le aziende sono identificate tramite un ID univoco e sono caratterizzate da: nome commerciale, partita IVA, nome e cognome di un referente, telefono ed email aziendale e dall'indirizzo di locazione (che nel caso di un ordine di vendita coincide con quello di spedizione).\\
-% I fornitori, inoltre, sono divisi in fornitori d'uva, di tappi e di bottiglie. Per ogni fornitura va identificata la data, il prezzo e la quantità del prodotto fornito.\\
-% Ovviamente le bottiglie di vino possono essere spedite in una determinata quantità in un \textbf{ordine} di vendita. Per l'ordine, identificato univocamente da un ID, è utile rappresentare la data in cui è stato fatto ed il prezzo totale (rappresentato dal prezzo delle bottiglie acquistate moltiplicate per la loro quantità più il prezzo di spedizione).\\
-% Ogni ordine è affidato ad un \textbf{corriere} il quale viene rappresentato tramite un ID ed un nome commerciale. Importante identificare la data di spedizione e di ricezione dell'ordine.\\
-% Ogni ordine viene venduto ad un \textbf{acquirente}, che può essere un'azienda o un privato. I privati vengono identificati tramite un'ID ed è utile tenere traccia di queste informazioni del privato: nome, cognome, telefono, email e l'indirizzo di spedizione.\\
-% Esistono alcune aziende, che anche se gestite esternamente, sono sotto lo stesso gruppo della cantina \emph{Nome Cantina}, le quali vendono le nostre bottigle di vino.\\
-% Queste aziende sono dei nostri negozi interni e possono ospitare degli \textbf{eventi} con una tematica che è rappresentata da un nostro vino. Gli eventi vengono definiti tramite il titolo dell'evento e il numero di edizione. A quest'evento \textbf{partecipano delle persone} che si devono registrare e inserire i propri dati (nome, cognome, età). Ovviamente ogni evento ha una data prefissata in cui si svolgerà.\\
-% Riguardo al reparto produttivo sono presenti tutte le tipologie di lavorazione dell'uva per la produzione del vino. Queste \textbf{linee produttive} sono l'ingresso delle materie prime, la pigiatura, la fermentazione, la vinificazione e la svinatura. Oltre a queste esistono altri reparti produttivi come l'imbottigliamento e il magazzino citato all'inizio. Tutti questi reparti sono identificati tramite un identificativo.\\
+% L'interesse principale di questo progetto e' modellare una base di dati che supporti l'operativita' della cantina vinicola \emph{NomeCantina}. La principale merce prodotta e' la bottiglia di vino che rappresenta l'unione di una bottiglia di vetro, di un tappo e di un tipo di vino. Ogni bottiglia è identificata dal nome del vino e dall'annata di esso. Dati importanti per tale prodotto sono il prezzo, il numero di unità prodotte e vendute, oltre che dal tipo di tappo e dal tipo di bottiglia.
+% Altro prodotto importante è il \textbf{vino}, che viene identificato tramite il nome. Inoltre dati importanti del vino sono la gradazione alcolica, il tempo di fermentazione e l'uva utilizzata oltre che lo stato produttivo, ovvero se il vino viene prodotto ancora o è ormai fuori commercio.\\ Ovviamente la cantina acquista esternamente da altre \textbf{aziende} le proprie \textbf{materie prime} che vanno a formare il prodotto finale. Le materie prime che vengono acquistate vengono identificate con un ID univoco. Se la materia prima è l'Uva questa viene rappresentata dall'anno di raccolta, dal nome e dal colore, se, invece, la materia prima sono i Tappi questa viene rappresentata dalla forma e dal materiale, infine se la materia prima sono le Bottiglie, questa viene rappresentata dalla capacità e dal colore. Inoltre è presente il dato che identifica la quantità posseduta dalla cantina sia per i tappi che per le bottigle.\\
+% Un tipo d'uva proviene da un tipo di \textbf{vigneto}, rappresentato da un ID univoco e dalla loro posizione geografica. \\
+% Le aziende con cui la cantina ha relazione sono molteplici. Queste aziende si dividono in fornitori, aziende di manutenzione macchinari e negozi interni della cantina. Le aziende sono identificate tramite un ID univoco e sono caratterizzate dal nome, dalla Partita IVA, dal nome e dal cognome del referente oltre che dal numero di telefono, dalla email aziendale e dalla sua posizione geografica. Per le aziende che sono Fornitori rappresentiamo poi la tipologia di Materia Prima fornita, sia essa Uva, Tappi o Bottiglie..\\
+% Ovviamente le bottiglie di vino possono essere spedite in una determinata quantità in un \textbf{ordine} di vendita. Relativamente ad un ordine rappresentiamo un ID univoco, la data in cui è stato effettuato, il corriere (rappresentato tramite un ID ed un nome commerciale.) a cui è stata affidato, la data di spedizione, la data di consegna e il prezzo totale (che deve corrispondere al prodotto tra il prezzo delle bottiglie di vino acquistate e il relativo prezzo sommato al costo della spedizione).\\
+% Ogni ordine viene venduto ad un \textbf{acquirente}, che può essere un'azienda o un privato. Per i privati, identificati da un ID, rappresentiamo il nome, il cognome, il numero di telefono e l'email oltre che l'indirizzo di residenza (che corrisponde con l'indirizzo di spedizione).\\
+% E' di consuetudine, per la cantina \emph{NomeCantina}, organizzare degli eventi all'interno dei propri negozi. Gli eventi hanno una tematica che è rappresentata da un nostro vino e vengono definiti tramite il titolo dell'evento e il numero di edizione. Ovviamente ogni evento ha una data prefissata in cui si svolgerà.
+% Riguardo al reparto produttivo sono presenti tutte le tipologie di lavorazione dell'uva per la produzione del vino. Queste \textbf{linee produttive} sono l'ingresso delle materie prime, la pigiatura, la fermentazione, la vinificazione e la svinatura. Oltre a queste esistono altri reparti produttivi come l'imbottigliamento e il magazzino dove le bottiglie di vino vengono divise per la colorazione del proprio vino (rosso, bianco, rosato e spumante).Nel magazzino viene tenuto traccia della quantità delle bottiglie. Tutti questi reparti sono identificati tramite un identificativo.\\
 % In ognugno di questi reparti lavorano dei \textbf{dipendeti} in determinati turni di lavoro. Per ogni dipendete (identificato tramite il codice fiscale) viene registrato il nome e il cognome. Ogni dipendente avrà un supervisore a cui fare riferimento e ogni linea produttiva sarà diretta da un dipendente dell'azienda.\\
 % Per ogni linea produttiva sono presenti dei \textbf{macchinari} che aiutano i dipendenti nelle mansioni quotidiane. I macchinari sono identificati tramite un codice univoco. Ad ogni macchinario viene fatta una manutenzione periodica, quindi è utile tenere traccia della data della prossima manutenzione. I macchinari avranno anche un nome commerciale e la data di acquisto.\\
 % Le manutenzioni avranno un costo e verrano eseguite in una determinata data. Le manutenzioni vengono eseguite da aziende esterne rappresentate come sopra.
