--- a/src/analisiRequisiti/strutturazione_requisiti.tex
+++ b/src/analisiRequisiti/strutturazione_requisiti.tex
@@ -3,8 +3,7 @@
 		\toprule
 		\rowcolor[rgb]{.929, .929, .929} \textbf {\large {FRASI RELATIVE A BOTTIGLIA DI VINO}} \\
 		\midrule
-		Una bottiglia di vino è il prodotto finale che viene venduto dalla cantina, e rappresenta l'unione di una bottiglia di vetro, di un tappo e di un tipo di vino. Ogni bottiglia è caratterizzata dal suo prezzo, dal numero di unità uguali prodotte e vendute, oltre che dal tipo di tappo e dal tipo di bottiglia 
-		Altri dati importanti sono il prezzo per bottiglia, il numero di bottiglie prodotte e vendute, il tipo di tappo e bottiglia ed infine dalla classificazione: vini a denominazione d'origine controllata e garantita (D.O.C.G.); vini a denominazione d'origine controllata (D.O.C.); vini ad indicazione geografica tipica (I.G.T.). Ciascuna tipologia di bottiglia di vino è racchiusa in magazzini. Ovviamente le bottiglie di vino possono essere spedite in una determinata quantità in un ordine di vendita\\
+		Una bottiglia di vino è il prodotto finale che viene venduto dalla cantina, e rappresenta l'unione di una bottiglia di vetro, di un tappo e di un tipo di vino. Ogni bottiglia è identificata dal nome del vino e dall'annata di esso. Dati importanti per tale prodotto sono il prezzo, il numero di unità prodotte e vendute, oltre che dal tipo di tappo e dal tipo di bottiglia. ed infine dalla classificazione: vini a denominazione d'origine controllata e garantita (D.O.C.G.); vini a denominazione d'origine controllata (D.O.C.); vini ad indicazione geografica tipica (I.G.T.). Ciascuna tipologia di bottiglia di vino è racchiusa in magazzini. Ovviamente le bottiglie di vino possono essere spedite in una determinata quantità in un ordine di vendita\\
 		\bottomrule
 	\end{tabular}
 
@@ -24,7 +23,7 @@
 		\toprule
 		\rowcolor[rgb]{.929, .929, .929} \textbf {\large {FRASI RELATIVE A MATERIA PRIMA}} \\
 		\midrule
-		Le materie prima che vengono acquistate viene rappresentato un ID univoco che le rappresenta. Se la materia prima è l'Uva questa viene rappresentata dall'anno di raccolta, dal nome e dal colore, se, invece, la materia prima sono i Tappi questa viene rappresentata dalla forma e dal materiale, infine se la materia prima sono le Bottiglie, questa viene rappresentata dalla capacità e dal colore.\\
+		Le materie prime che vengono acquistate vengono identificate con un ID univoco. Se la materia prima è l'Uva questa viene rappresentata dall'anno di raccolta, dal nome e dal colore, se, invece, la materia prima sono i Tappi questa viene rappresentata dalla forma e dal materiale, infine se la materia prima sono le Bottiglie, questa viene rappresentata dalla capacità e dal colore. Inoltre è presente il dato che identifica la quantità posseduta dalla cantina sia per i tappi che per le bottigle.\\
 		\bottomrule
 	\end{tabular}
 
@@ -45,7 +44,7 @@
 		\rowcolor[rgb]{.929, .929, .929} \textbf {\large {FRASI RELATIVE AD AZIENDA}} \\
 		\midrule
 
-		Una Azienda è rappresentata dal nome, dalla Partita IVA, dal nome e dal cognome del referente oltre che dal numero di telefono, dalla email aziendale e dalla sua posizione geografica. Per le aziende che sono Fornitori rappresentiamo poi la tipologia di Materia Prima fornita, sia essa Uva, Tappi o Bottiglie.\\
+		Una Azienda è rappresentata dal nome, dalla Partita IVA, dal nome e dal cognome del referente oltre che dal numero di telefono, dalla email aziendale e dalla sua posizione geografica (he corrisponde con l'indirizzo di spedizione). Per le aziende che sono Fornitori rappresentiamo poi la tipologia di Materia Prima fornita, sia essa Uva, Tappi o Bottiglie.\\
 		\bottomrule
 	\end{tabular}
 	
@@ -64,7 +63,7 @@
 	\begin{tabular}{P{16cm}}
 		\toprule
 		\rowcolor[rgb]{.929, .929, .929} \textbf {\large {FRASI RELATIVE AD PRIVATO}} \\
-		Per i privati, che sono delle persone che hanno effettuato un ordine nel negozio online della cantina rappresentiamo il nome, il cognome, il numero di telefono e l'email oltre che l'indirizzo di residenza (che corrisponde con l'indirizzo di spedizione).\\
+		Per i privati, identificati da un ID, rappresentiamo il nome, il cognome, il numero di telefono e l'email oltre che l'indirizzo di residenza (che corrisponde con l'indirizzo di spedizione).\\
 		\bottomrule
 	\end{tabular}
 	
@@ -73,25 +72,16 @@
 	\begin{tabular}{P{16cm}}
 		\toprule
 		\rowcolor[rgb]{.929, .929, .929} \textbf {\large {FRASI RELATIVE AD EVENTO}} \\
-		Gli eventi hanno una tematica che è rappresentata da un nostro vino. Gli eventi vengono definiti tramite il titolo dell'evento e il numero di edizione. A quest'evento partecipano delle persone. Ovviamente ogni evento ha una data prefissata in cui si svolgerà.\\
+		Gli eventi hanno una tematica che è rappresentata da un nostro vino e vengono definiti tramite il titolo dell'evento e il numero di edizione. Ovviamente ogni evento ha una data prefissata in cui si svolgerà.\\
 		\bottomrule
 	\end{tabular}
 	
 	\vspace{0.5cm}
-	
-	\begin{tabular}{P{16cm}}
-		\toprule
-		\rowcolor[rgb]{.929, .929, .929} \textbf {\large {FRASI RELATIVE A PARTECIPANTE}} \\
-		A quest'evento partecipano delle persone che si devono registrare e inserire i propri dati (nome, cognome, età).\\
-		\bottomrule
-	\end{tabular}
-	
-	\vspace{0.5cm}
-	
+		
 	\begin{tabular}{P{16cm}}
 		\toprule
 		\rowcolor[rgb]{.929, .929, .929} \textbf {\large {FRASI RELATIVE A LINEA PRODUTTIVA}} \\
-		Riguardo al reparto produttivo sono presenti tutte le tipologie di lavorazione dell'uva per la produzione del vino. Queste linee produttive sono l'ingresso delle materie prime, la pigiatura, la fermentazione, la vinificazione e la svinatura. Oltre a queste esistono altri reparti produttivi come l'imbottigliamento e il magazzino citato all'inizio. Tutti questi reparti sono identificati tramite un identificativo. Ciascuna tipologia di bottiglia di vino è racchiusa in magazzini aventi il numero di bottiglie contenute divisi per la colorazione del vino (rosso, bianco, rosato e spumante). In ognugno di questi reparti lavorano dei dipendeti in un determinati turni di lavoro. Per ogni linea produttiva sono presenti dei macchinari che aiutano i dipendenti nelle mansioni quotidiane.\\
+		Riguardo al reparto produttivo sono presenti tutte le tipologie di lavorazione dell'uva per la produzione del vino. Queste linee produttive sono l'ingresso delle materie prime, la pigiatura, la fermentazione, la vinificazione e la svinatura. Oltre a queste esistono altri reparti produttivi come l'imbottigliamento e il magazzino dove le bottiglie di vino vengono divise per la colorazione del proprio vino (rosso, bianco, rosato e spumante).Nel magazzino viene tenuto traccia della quantità delle bottiglie. Tutti questi reparti sono identificati tramite un identificativo. In ognugno di questi reparti lavorano dei dipendeti in un determinati turni di lavoro. Per ogni linea produttiva sono presenti dei macchinari che aiutano i dipendenti nelle mansioni quotidiane.\\
 		\bottomrule
 	\end{tabular}
 	
