--- a/main.tex
+++ b/main.tex
@@ -33,6 +33,6 @@
     \section{Progettazione logica}
         \input{src/progettazioneLogica/_main}
 
-    \section{Query e indici}
+    \section{Query ed indici}
         \input{src/queryIndici/_main}
 \end{document}
