--- a/src/analisiRequisiti/_main.tex
+++ b/src/analisiRequisiti/_main.tex
@@ -1,3 +1,5 @@
+\input{src/analisiRequisiti/analisi_requisiti.tex}
+
 \subsection{Glossario dei termini}
 \input{src/analisiRequisiti/glossario_termini.tex}
 
