--- a/src/analisiRequisiti/glossario_termini.tex
+++ b/src/analisiRequisiti/glossario_termini.tex
@@ -7,15 +7,15 @@
 		\rowcolor[rgb]{.929, .929, .929} Termine & Sinonimi & Descrizione & Collegamento \\
 		
 		\midrule
-		Bottiglia di vino & & Una bottiglia di vino della cantina in vendita online e nei negozi fisici. & Vino, Bottiglia, Tappo, Ordine\\
+		Bottiglia di vino & & Una bottiglia di vino della cantina in vendita online e nei negozi fisici. & Vino, Bottiglia, Tappo, Ordine, Magazzino\\
 		\midrule
-		Tipo Vino & Vino & Le tipologie di vino prodotte all'interno della cantina. & Uva, Evento, Bottiglia di vino \\
+		Vino & Tipo Vino & Le tipologie di vino prodotte all'interno della cantina. & Uva, Evento, Bottiglia di vino \\
 		
 		\midrule
-		Materia prima & & Rappresenta le materie prime che vengono acquistate e manipolate per comporre le bottiglie di vino. &  Tipo Vino, Tipo uva, Fornitore\\
+		Materia prima & & Rappresenta le materie prime che vengono acquistate e manipolate per comporre le bottiglie di vino. &  Vino, Tipo Uva, Fornitore, Bottiglia di vino\\
 		
 		\midrule
-		Tipo uva &  & La tipologia dell'uva che viene acquistata per produrre il vino. &  Uva, Vigneto\\
+		Uva & Tipo Uva & La tipologia dell'uva che viene acquistata per produrre il vino. &  Vigneto, Vino\\
 		
 		\midrule
 		Vigneto & & Rappresenta il vigneto dalla quale proviene un determinato lotto di uva acquistato. &  Tipo Uva\\
@@ -24,12 +24,15 @@
 		Acquirente & & Colui che ha effettuato l'ordine. Può essere un privato o un'azienda &  Ordine, Privato, Azienda\\
 
 		\midrule
-		Azienda & Fornitore, Negozio interno, Corriere & Un'azienda con cui la cantina ha rapporti, siano questi di fornitura, di vendita o di altra natura. &  Azienda manutenzione, Negozio interno, Fornitore\\
+		Azienda & Fornitore, Negozio interno, A. Manutenz. & Un'azienda con cui la cantina ha rapporti, siano questi di fornitura, di vendita o di altra natura. &  Materia prima, Evento, Macchinario\\
 
 		\midrule
 		Ordine & & Un ordine effettuato da un acquirente, contiene le informazioni della merce acquistata e della spedizione. &  Bottiglia di vino, Corriere, Acquirente\\
-
+		
 		\midrule
+		Corriere & & Il corriere che si occupa della spedizione di un ordine & Ordine\\
+		\midrule
+		
 		Evento & & Un evento organizzato all'interno di un negozio interno in onore di un vino prodotto dalla cantina. &  Tipo Vino, Negozio Interno\\
 
 		\midrule
@@ -39,7 +42,7 @@
 		Dipendente & & Colui che lavora per la cantina ed è assegnato ad una linea produttiva &  Linea produttiva\\
 
 		\midrule
-		Macchinario & & Strumento utilizzato all'interno di una linea produttiva &  Linea produttiva\\
+		Macchinario & & Strumento utilizzato all'interno di una linea produttiva &  Linea produttiva, Azienda\\
 		
 		\bottomrule
 	\end{longtable}
