Agiunta classificazione a Vino

--- a/src/progettazioneLogica/_main.tex
+++ b/src/progettazioneLogica/_main.tex
@@ -15,3 +15,5 @@
 
 \subsection{Schema relazionale e vincoli d'integrità referenziale}
 \input{src/progettazioneLogica/schema_relazionale.tex}
+
+\input{src/progettazioneLogica/diagramma_er_ristrutturato.tex}
