--- a/src/progettazioneConcettuale/_main.tex
+++ b/src/progettazioneConcettuale/_main.tex
@@ -1,4 +1,4 @@
-\subsection{Analisi entità}\label{analisi_entita}
+\subsection{Analisi entità}
     \input{src/progettazioneConcettuale/analisi_entita.tex}
     
 \subsection{Analisi delle relazioni e delle cardinalità}
